samples/troubleshooting/invalid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <remedy>
        <title>R</title>
      </remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>